# glassdao

./: README.md
contracts/: DOCS.md  README.md  config.json  package-lock.json  package.json  tsconfig.json
contracts/src/: Publisher.test.ts  Publisher.ts  main.ts
ethereum/: .tool-versions
ethereum/script/: Link.s.sol
ethereum/src/: Link.sol
ethereum/test/: Link.t.sol
eve/: Cargo.toml  Dockerfile  env.sample  fly.toml
eve/abi/: Link.json
eve/src/: db.rs  lib.rs  listen.rs  main.rs  post.rs  updater.rs
ui/: package-lock.json  package.json
ui/src/components/: AppLayout.tsx  ConnectMetaMask.tsx  Flex.tsx  Header.tsx  IdCard.tsx  Logo.tsx  PostReview.tsx  SelectRole.tsx
ui/src/hooks/: useUserRole.ts
ui/src/lib/: merkleroot.ts  reviews.ts  transform.js  transform.js.map  transform.ts  useZkSetup.tsx  zkappWorker.ts  zkappWorkerClient.ts
ui/src/lib/abis/contracts/link/: abi.json  address.ts
ui/src/pages/: _app.tsx  index.tsx  review.tsx
ui/src/pages/[companyName]/: review.tsx
ui/src/pages/api/: ipfs.ts  list.ts  oracle.ts
ui/src/pages/contributor/: index.tsx  setup.tsx
ui/src/pages/dao/: [address].tsx  setup.tsx
ui/src/pages/dao/[address]/: index.tsx
ui/src/pages/dao/[address]/add-contributor/: index.tsx
ui/src/styles/: globals.css
